--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+/* fondo patron */
+body {
+    background-color: #005e06;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2392ac9f' fill-opacity='0.2'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    }
+
+/* h1 a h5 */
 h1,
 h2,
 h3{
-    color:brown;
+    color: wheat;
     font-family: 'Lato', sans-serif;
-    font-weight: 700;
+    font-weight: 300;
 }
 
 
-  nav {
-    top: 0;
-    width: 100%;
-    background-color: burlywood;
-  }
-  nav ul {
-    position:fixed;
-    top: 0;
-    width: 100%;
-    background-color: burlywood;
-    left: 350px;
-  }
+
   
 h1{
     font-size: 3em;
+    font-weight: 900;
+    overflow: auto;
+text-align: center;
 }
 
 h2{
@@ -34,39 +33,47 @@ h3{
     font-size: 2em;
 }
 
+
+
 p{
-    color: gray;
+    color:antiquewhite;
     font-family: 'Arial', sans-serif;
     font-size: 1.4em;
     line-height: 1.5em;
 }
 
-label{
-    color: brown;
-}
+h5 {
+    font-size: 2em;
+    color: whitesmoke;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+   }
 
-nav{
-    background-color: burlywood;
-}
+/* para la imagen del header */
+.responsive{
+    height: auto;
+    width: 60%;
+    padding: 5px;
 
-    nav ul{
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
+}
+/* inicio css footer */
+.icono{
+    width: 32px;
+    height: 32px;
     }
 
-        nav ul li a{
-            margin-left: 10px;
-            margin-right: 20px;
-            color: black;
-            text-decoration: none;
-            font-size: 1.1em;
-            font-weight: 700;
-            font-family: 'Lato', sans-serif;
-            float: left ;
-        }
+footer {
+    width: auto;
+    height:auto;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+    
+}
 
+
+footer a {text-decoration: none;}
 
 .logo{
     display:block;
@@ -75,67 +82,138 @@ nav{
     
     
 }
+/* fin css footer */
 
-.triple{
-    max-height: auto;
-    max-width: 100%;
-}
-.principal{
-    max-width: 40%;
-    height: auto;
-    padding:0px;
-    margin-bottom: 10px;
-
-}
-.flotador{
-    float: left;
-    
-}
-.icono{
-    width: 32px;
-    height: 32px;
-    }
-body {background-color: burlywood;
-padding: 20px;}
-footer {
-    background-color: burlywood;
+.contacto{ 
+    height:auto;
     width: auto;
-    height:auto;
-    margin-top: 10px;
-    
-}
-h1{overflow: auto;
-text-align: center;}
-article{
-    height:auto;
-    width:auto;
-    border: 1px solid;
-    background-color: beige;
     overflow: auto;
-    padding: 5px;
-}
-.caja{
-    height:auto;
-    width:auto;
     border: 1px solid;
-    background-color: beige;
-    overflow: auto;
-    padding: 10px;
+    background-color: #005e06;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2392ac9f' fill-opacity='0.2'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    display: inline-block;
+    position:absolute
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items:center ;
+    text-align: center;
 }
 
-iframe{
-    float:left;
-    padding:10px;
-}
+
 table{background-color: aliceblue;
 padding: 10px;}
 
-footer a {text-decoration: none;}
-
+/* flex + position */
 .flex-direction{
     display: flex;
     justify-content: center;
     flex-direction: center;
     align-items: center;
 }
+
+.flex-wrap{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap:wrap;
+
+}
+.center{
+    position:relative;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 1em;
+}
+
+
+/* nav */
+
+nav ul li a{
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+}
+
+.navbar a {
+    color: wheat;
+    font-family: 'Lato', sans-serif;
+   }
+
+/* locales cards */
+.cajita{
+    height:auto;
+    width: auto;
+    overflow: hidden;
+    border: 1px solid;
+    background-color: #005e06;
+    
+   }
+
+   
+
+   .cajita p {
+    color: wheat;
+    font-family: 'Lato', sans-serif;
+   }
+
+   
+
+   .card {
+    width: 18rem;
+    background-color: #005e06;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2392ac9f' fill-opacity='0.2'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    font-family: 'Lato', sans-serif;
+    color: antiquewhite;
+   }
+   .card p {
+    color:aliceblue;
+   }
+
+   
+
+    /* contacto */
+
+        .main-block {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        }
+        form {
+        padding: 25px;
+        margin: 25px;
+        box-shadow: 0 2px 5px #f5f5f5; 
+        background-color: #005e06; 
+        }
+        .fas {
+        margin: 25px 10px 0;
+        font-size: 72px;
+        color: #fff;
+        }
+        
+        input, textarea {
+        width: calc(100% - 18px);
+        padding: 8px;
+        margin-bottom: 20px;
+        border: 1px solid #1c87c9;
+        outline: none;
+        }
+        input::placeholder {
+        color: #666;
+        }
+        button {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        background: #005e06; 
+        font-size: 16px;
+        font-weight: 400;
+        color: #fff;
+        }
+        button:hover {
+        background: #2371a0;
+        }    
+        
     
