--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,9 @@ footer {
     height:auto;
     margin-top: 10px;
     display: flex;
-    flex-wrap: wrap;
     max-width: 100%;
+    text-align: center;
+    align-items: center;
     
 }
 
@@ -78,7 +79,7 @@ footer a {text-decoration: none;}
 .logo{
     display:block;
     margin: auto;
-    max-width: 50%;
+    max-width: 100%;
     
     
 }
