--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,8 @@
 @import "_vars";
 @import "mixins";
 @import "_commons";
-@import "_header";
+@import "_gastronomia";
 @import "_footer";
 @import "_contacto";
-@import "_locales";
+@import "_cervezas";
 @import "_nav";
