--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ h3 {
   font-size: 2em;
 }
 
-h5 {
+h4 {
   font-size: 2em;
   font-weight: 700;
   color: #fff;
@@ -90,6 +90,27 @@ p {
   width: 40%;
   padding: 5px;
   object-fit: contain;
+}
+
+.video-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.video-foreground {
+  width: 100%;
+  height: 100%;
+}
+
+.video-foreground iframe {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
 
 .icono {
@@ -186,7 +207,6 @@ button:hover {
   height: auto;
   width: auto;
   overflow: hidden;
-  border: 1px solid;
   background-color: #005e06;
 }
 
@@ -195,6 +215,46 @@ button:hover {
   font-family: "Lato", sans-serif;
 }
 
+@media (min-width: 0px) {
+  .cajita h3 {
+    font-size: 1.1em;
+  }
+  .cajita p {
+    font-size: 0.9em;
+  }
+}
+@media (min-width: 576px) {
+  .cajita h3 {
+    font-size: 1.3em;
+  }
+  .cajita p {
+    font-size: 1.1em;
+  }
+}
+@media (min-width: 768px) {
+  .cajita h3 {
+    font-size: 1.4em;
+  }
+  .cajita p {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 992px) {
+  .cajita h3 {
+    font-size: 1.5em;
+  }
+  .cajita p {
+    font-size: 1.3em;
+  }
+}
+@media (min-width: 1200px) {
+  .cajita h3 {
+    font-size: 1.6em;
+  }
+  .cajita p {
+    font-size: 1.4em;
+  }
+}
 .card {
   width: 18rem;
   background-color: #005e06;
